--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,7 +5,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/server.ts"
+    "dev": "nodemon src/server.ts",
+    "dev:test": "dotenv -e .env.test prisma db seed && dotenv -e .env.test nodemon src/server.ts",
+    "test": "NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest -i",
+    "test:coverage": "NODE_OPTIONS=--experimental-vm-modules jest --coverage",
+    "migrate": "dotenv -e .env.test prisma migrate dev"
   },
   "keywords": [],
   "author": "",
@@ -18,10 +22,20 @@
     "@types/joi": "^17.2.3",
     "@types/node": "^16.3.3",
     "@types/supertest": "^2.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "babel-eslint": "^10.1.0",
     "dotenv-cli": "^5.1.0",
-    "eslint": "^7.32.0",
+    "eslint": "^8.14.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-promise": "^6.0.0",
     "jest": "^28.0.3",
     "nodemon": "^2.0.12",
+    "prettier": "^2.6.2",
     "prisma": "^3.13.0",
     "supertest": "^6.1.3",
     "ts-jest": "^28.0.0",
