--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,9 +4,12 @@
   "type": "module",
   "description": "",
   "main": "index.js",
+  "prisma": {
+    "seed": "ts-node ./prisma/seed.ts"
+  },
   "scripts": {
     "dev": "nodemon src/server.ts",
-    "dev:test": "dotenv -e .env.test prisma db seed && dotenv -e .env.test nodemon src/server.ts",
+    "dev:test": "dotenv -e .env.test nodemon src/server.ts",
     "test": "NODE_OPTIONS=--experimental-vm-modules dotenv -e .env.test jest -i",
     "test:coverage": "NODE_OPTIONS=--experimental-vm-modules jest --coverage",
     "migrate": "dotenv -e .env.test prisma migrate dev"
@@ -51,8 +54,5 @@
     "express-async-errors": "^3.1.1",
     "joi": "^17.4.1",
     "react-player": "^2.10.0"
-  },
-  "prisma": {
-  "seed": "ts-node prisma/seed.ts"
-}
+  }
 }
